language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/return_with_borrowed_loc_resource_invalid.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/return_with_borrowed_loc_resource_invalid.move:5:13 ───
   │
 5 │         let s = X { u: 0 };
   │             - The local 's' still contains a resource value due to this assignment. The resource must be consumed before the function returns
 6 │         let u = &s.u;
 7 │         copy u;
   │               ^ Invalid return
   │

